--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bosonic",
-  "version": "0.2.1",
+  "version": "0.3.0",
   "description": "bosonic =======",
   "main": "index.js",
   "directories": {
@@ -30,6 +30,7 @@
     "chai": "~1.9.0",
     "karma-chai": "~0.1.0",
     "karma-chrome-launcher": "~0.1.2",
-    "karma-firefox-launcher": "~0.1.3"
+    "karma-firefox-launcher": "~0.1.3",
+    "karma-effroi": "0.0.0"
   }
 }
