--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "url": "https://github.com/bosonic/bosonic/issues"
   },
   "devDependencies": {
-    "grunt": "~0.4.2",
-    "grunt-contrib-watch": "~0.5.3",
+    "grunt": "^0.4.5",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-concat": "~0.3.0",
     "karma": "~0.11.14",
     "grunt-karma": "~0.7.2",
     "mocha": "~1.17.1",
