New lightweight platform build

--- a/package.json
+++ b/package.json
@@ -21,18 +21,6 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-clean": "~0.5.0",
-    "karma": "~0.11.14",
-    "grunt-karma": "~0.7.2",
-    "mocha": "~1.17.1",
-    "karma-mocha": "~0.1.1",
-    "chai": "~1.9.0",
-    "karma-chai": "~0.1.0",
-    "karma-chrome-launcher": "~0.1.2",
-    "karma-firefox-launcher": "~0.1.3",
-    "karma-effroi": "0.0.0",
-    "karma-opera-launcher": "^0.1.0",
-    "karma-safari-launcher": "^0.1.1"
+    "grunt-contrib-concat": "^0.5.0"
   }
 }
