--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bosonic",
   "version": "0.4.0",
-  "description": "bosonic =======",
+  "description": "Web Components development toolkit",
   "main": "index.js",
   "directories": {
     "test": "test"
