--- a/package.json
+++ b/package.json
@@ -30,8 +30,16 @@
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-karma": "^0.9.0",
     "grunt-mocha-test": "^0.12.1",
     "jsdom": "^1.0.1",
+    "karma": "^0.12.24",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.1.5",
+    "karma-effroi": "0.0.0",
+    "karma-firefox-launcher": "^0.1.3",
+    "karma-mocha": "^0.1.9",
+    "karma-sauce-launcher": "^0.2.10",
     "load-grunt-tasks": "^0.6.0",
     "mocha": "^1.21.4"
   }
