--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-eslint": "^7.0.1",
     "grunt-jsonlint": "^1.0.4",
     "grunt-karma": "^0.9.0",
     "grunt-mocha-test": "^0.12.1",
