--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "chai": "^1.9.2",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-connect": "^0.10.1",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-watch": "^0.6.1",
     "grunt-jsonlint": "^1.0.4",
@@ -44,6 +45,7 @@
     "karma-mocha": "^0.1.9",
     "karma-sauce-launcher": "^0.2.10",
     "load-grunt-tasks": "^0.6.0",
-    "mocha": "^1.21.4"
+    "mocha": "^1.21.4",
+    "webcomponents.js": "^0.7.2"
   }
 }
