--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-concat": "^0.5.0",
-    "grunt-contrib-connect": "^0.10.1",
+    "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
-    "load-grunt-tasks": "^0.6.0"
+    "load-grunt-tasks": "^3.2.0",
+    "web-component-tester": "^3.3.21"
   }
 }
