--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bosonic",
-  "version": "0.4.0",
-  "description": "Everyday UI elements as Web Components - library & polyfills package",
+  "version": "1.0.0",
+  "description": "A collection of practical everyday Web Components - runtime & polyfills package",
   "main": "dist/bosonic-runtime.js",
   "directories": {
     "test": "test"
