--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "^0.8.0",
     "grunt-contrib-watch": "^0.6.1",
+    "handjs": "^1.3.11",
     "load-grunt-tasks": "^3.2.0",
     "web-component-tester": "^3.3.21"
   }
