--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "handjs": "^1.3.11",
     "load-grunt-tasks": "^3.2.0",
