--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bosonic",
   "version": "1.0.0",
-  "description": "A collection of practical everyday Web Components - runtime & polyfills package",
+  "description": "A collection of practical everyday Web Components",
   "main": "dist/bosonic-runtime.js",
   "directories": {
     "test": "test"
@@ -22,13 +22,19 @@
     "webcomponents.js": "^0.7.2"
   },
   "devDependencies": {
+    "autoprefixer": "^6.2.3",
     "grunt": "^0.4.5",
-    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-connect": "^0.8.0",
+    "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
+    "grunt-contrib-uglify": "^0.9.2",
     "load-grunt-tasks": "^3.2.0",
+    "postcss": "^5.0.10",
+    "postcss-color-function": "^2.0.0",
+    "postcss-custom-properties": "^5.0.0",
+    "postcss-import": "^7.1.0",
+    "posthtml": "^0.7.0",
     "web-component-tester": "^3.3.21"
   }
 }
