Added b-notification (a rewrite of b-flash-message)

--- a/doc/config.json
+++ b/doc/config.json
@@ -65,6 +65,12 @@
                     "lib": "Dialog",
                     "import": ["b-dialog"],
                     "demos": "b-dialog"
+                },
+                {
+                    "path": "notification",
+                    "lib": "Notification",
+                    "import": ["b-notification"],
+                    "demos": "b-notification"
                 }
             ]
         }
