Imported b-controlgroup (ex- b-segmented-controls) element

--- a/doc/config.json
+++ b/doc/config.json
@@ -77,6 +77,12 @@
                     "lib": "Progress bar",
                     "import": ["b-progress"],
                     "demos": "b-progress"
+                },
+                {
+                    "path": "controlgroup",
+                    "lib": "Control group",
+                    "import": ["b-controlgroup"],
+                    "demos": "b-controlgroup"
                 }
             ]
         }
