The runtime now removes the body unresolved attribute if present ; also documented FOUC prevention

--- a/doc/config.json
+++ b/doc/config.json
@@ -13,6 +13,10 @@
                     "lib": "Using elements"
                 },
                 {
+                    "path": "styling-elements",
+                    "lib": "Styling elements"
+                },
+                {
                     "path": "working-with-frameworks",
                     "lib": "Working with frameworks"
                 },
