--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
+react/lib/*
+elements/lib/*
+
 # Dependencies
 node_modules/*
+react/node_modules/*
+elements/node_modules/*
 
 # Editors config folders
 .idea
