--- a/elements/package.json
+++ b/elements/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bosonic",
-  "version": "1.0.0",
+  "version": "2.0.0-beta1",
   "description": "A collection of practical everyday UI Components",
   "main": "./lib",
   "repository": "https://github.com/bosonic/bosonic/tree/master/elements",
